# shipyard-platform

./: .dockerignore  .env.example  .gitignore  Cargo.toml  Makefile  README.md
.github/workflows/: ci.yml
crates/shipyard-config/: Cargo.toml
crates/shipyard-config/src/: lib.rs
crates/shipyard-config/tests/: config_from_iter.rs
crates/shipyard-observability/: Cargo.toml
crates/shipyard-observability/src/: lib.rs
crates/shipyard-web/: Cargo.toml
crates/shipyard-web/src/: contract.rs  error.rs  lib.rs  middleware.rs  request_log.rs
crates/shipyard-web/tests/: contract.rs
docs/api/: conventions.md
docs/architecture/: README.md  adr-000-template.md  adr-0009-idempotency-orders.md  adr-001-thin-platform.md  adr-002-dev-golden-path-makefile.md  adr-003-language-rust.md  adr-004-web-framework-axum.md  adr-005-repo-strategy-monorepo.md  adr-006-config-strategy-envy.md  adr-007-observability-local-stack.md  adr-008-persistence-bootstrap.md  adr-010-outbox-worker.md
docs/runbooks/: configuration.md  idempotency.md  local-persistence.md  local-runtime.md  metrics-local.md  observability-local.md  outbox.md
ops/compose/: docker-compose.yml  otel-collector-config.yaml  prometheus.yml
scripts/: smoke.sh
services/fulfilment-api/: Cargo.toml  Dockerfile
services/fulfilment-api/migrations/: 0001_init.sql  0002_idempotency_keys.sql  0003_outbox.sql
services/fulfilment-api/src/: idempotency.rs  lib.rs  main.rs  metrics.rs
services/fulfilment-api/src/http/: error.rs  mod.rs  router.rs
services/fulfilment-api/src/http/middleware/: http_metrics.rs  mod.rs  request_id.rs
services/fulfilment-api/src/http/v1/: mod.rs  orders.rs
services/fulfilment-api/src/http/v1/orders/: mod.rs  repo.rs  router.rs  types.rs  validate.rs
services/fulfilment-api/src/http/v1/orders/handlers/: create.rs  get.rs  mod.rs  validate.rs
services/fulfilment-api/src/outbox/: delivery.rs  mod.rs  repo.rs  types.rs  worker.rs
services/fulfilment-api/tests/: common.rs  common_db.rs  common_json.rs  db_idempotency.rs  db_persistence.rs  health_ready.rs  orders_validate.rs  outbox.rs
