[package]
name = "shipyard-web"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.7"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
uuid = { version = "1", features = ["v4"] }

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
tower = "0.5"
http-body-util = "0.1"
hyper = { version = "1", features = ["client"] }
serde_json = "1"