[package]
name = "fulfilment-api"
version = "0.1.0"
edition = "2024"

[dependencies]
shipyard-config = { path = "../../crates/shipyard-config" }
shipyard-web = { path = "../../crates/shipyard-web" }
axum = "0.7"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "signal"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[dev-dependencies]
tower = "0.5"
http-body-util = "0.1"