[package]
name = "fulfilment-api"
version = "0.1.0"
edition = "2024"

[dependencies]
# Harbour crates
shipyard-config = { path = "../../crates/shipyard-config" }
shipyard-observability = { path = "../../crates/shipyard-observability" }
shipyard-web = { path = "../../crates/shipyard-web" }

# Runtime + HTTP
axum = "0.7"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "signal"] }

# Serialisation
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Logging/tracing

tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json", "env-filter"] }


# Metrics
once_cell = "1"
prometheus-client = "0.22"

# DB
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "macros", "migrate", "uuid", "json"] }

# Correctness (idempotency hashing)
sha2 = "0.10"
hex = "0.4"

# IDs
uuid = { version = "1", features = ["serde", "v4"] }

# Error handling + async helpers
anyhow = "1"
async-trait = "0.1"

[dev-dependencies]
tower = "0.5"
http-body-util = "0.1"
